Fix iOS input truncation issue

--- a/src/sass/views/includes/password.scss
+++ b/src/sass/views/includes/password.scss
@@ -63,6 +63,12 @@
     border: none;
   }
 
+  .input-password {
+    border-bottom: .5px dotted rgba(255,255,255,.36) !important;
+    margin-left: auto !important;
+    padding: 0 !important;
+  }
+
   .cta-buttons {
     position: absolute;
     bottom: 0;
