--- a/src/sass/views/onboarding/onboard-tour.scss
+++ b/src/sass/views/onboarding/onboard-tour.scss
@@ -105,6 +105,7 @@
     background: none;
     font-size: 32px;
     color: white;
+    line-height: 30px;
   }
 
   input::selection {
